--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Nunito;
     margin: 0;
     padding: 0;
     /* opacity: 0.24; */
@@ -14,8 +14,8 @@ body {
     background: #090B1A;
     display: flex;
     justify-content: space-between;
-    margin-left: 9rem;
-    margin-right: 5rem;
+    margin-left: 5rem;
+    margin-right: 3rem;
     margin-top: 1rem;
 }
 
@@ -45,7 +45,7 @@ body {
 
 /* hero page */
 
-.hero {
+/* .hero {
     color: #fff;
     display: flex;
 }
@@ -56,7 +56,8 @@ body {
 }
 
 .hero_text {
-    padding: 100px 0;
+    padding: 4rem 0;
+    margin: 0 auto; 
 }
 
 .hero h1 {
@@ -76,7 +77,7 @@ body {
 }
 
 .hero_img {
-    padding-right: 5rem;
+    padding-right: 3rem;
 }
 
 .cta-button {
@@ -93,7 +94,61 @@ body {
 .cta-button:hover {
     background-color: #0DBF81;
     
+} */
+
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Adjust the height as needed */
+    /* background-color: #f4f4f4; */
 }
+
+.hero-content {
+    text-align: center;
+    padding: 20px; /* Adjust the padding as needed */
+}
+
+.hero_text h1 {
+    color: #0DBF81;
+}
+
+.hero_text {
+    max-width: 600px; /* Set a maximum width for better readability */
+    margin: 0 auto; /* Center the content inside the container */
+}
+
+.hero h1 {
+    font-size: 3em;
+    margin-bottom: 20px;
+}
+
+.hero h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.hero p {
+    font-size: 1.2em;
+    line-height: 1.6;
+    margin-bottom: 30px;
+}
+
+.cta-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    text-decoration: none;
+    color: #fff;
+    background-color: #0DBF81;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.cta-button:hover {
+    background-color: #0DBF81;
+}
+
 
 /* about */
 
