--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 
 /* hero page */
 
-/* .hero {
+ .hero {
     color: #fff;
     display: flex;
 }
@@ -53,6 +53,7 @@ body {
 .hero-content {
     max-width: 800px;
     margin: 0 auto;
+    line-height: 2.3rem;
 }
 
 .hero_text {
@@ -65,6 +66,10 @@ body {
     margin-bottom: 20px;
     color: #0DBF81;
     
+}
+
+.socials {
+    padding-top: 2rem;    
 }
 
 .hero span {
@@ -94,19 +99,19 @@ body {
 .cta-button:hover {
     background-color: #0DBF81;
     
-} */
+} 
 
-.hero {
+/*.hero {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh; /* Adjust the height as needed */
-    /* background-color: #f4f4f4; */
+    /* background-color: #f4f4f4;
 }
 
 .hero-content {
     text-align: center;
-    padding: 20px; /* Adjust the padding as needed */
+    padding: 20px; 
 }
 
 .hero_text h1 {
@@ -114,8 +119,8 @@ body {
 }
 
 .hero_text {
-    max-width: 600px; /* Set a maximum width for better readability */
-    margin: 0 auto; /* Center the content inside the container */
+    max-width: 600px; 
+    margin: 0 auto;
 }
 
 .hero h1 {
@@ -148,6 +153,7 @@ body {
 .cta-button:hover {
     background-color: #0DBF81;
 }
+*/
 
 
 /* about */
@@ -265,7 +271,8 @@ body {
 /* skills */
 
 #skills {
-    padding: 60px
+    padding: 60px;
+    
 }
 
 #skills h2 {
@@ -278,10 +285,11 @@ body {
     padding-left: 30rem
 }
 
-/* .skill {
-    margin-bottom: 20px;
-    text-align: center;
-} */
+.skill {
+    /* margin-bottom: 20px; */
+    /* text-align: center; */
+    margin: 0 auto;
+}
 
 .skill-name {
     color: #FFF;
@@ -297,6 +305,43 @@ body {
     height: 20px;
     background-color: #0DBF81;
     border-radius: 5px;
+}
+
+/* portfolio */
+
+
+/* #portfolio {
+    color: #232230;
+    font-family: Nunito;
+    font-size: 62px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    padding-left: 30rem
+} */
+
+#portfolio h2 {
+    color: #232230;
+    font-family: Nunito;
+    font-size: 62px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    padding-left: 30rem
+}
+
+#portfolio img {
+    width: 257px;
+    height: 234px;
+    flex-shrink: 0;
+}
+
+.project {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 25rem;
+    margin-right:23rem;
+   
 }
 
 /* contact */
