--- a/style.css
+++ b/style.css
@@ -310,15 +310,11 @@ body {
 /* portfolio */
 
 
-/* #portfolio {
-    color: #232230;
-    font-family: Nunito;
-    font-size: 62px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: normal;
-    padding-left: 30rem
-} */
+#portfolio {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
 
 #portfolio h2 {
     color: #232230;
@@ -339,18 +335,40 @@ body {
 .project {
     display: flex;
     justify-content: space-between;
-    margin-left: 25rem;
-    margin-right:23rem;
-   
+    margin-left: 21rem;
+    margin-right: 27rem;
+}
+
+.project p,
+h3 {
+    padding-top: 1px;
+}
+
+.view {
+    justify-content: center;
 }
 
 /* contact */
 
-.contact p {
+#contact h2 {
+    color: #232230;
+    font-family: Nunito;
+    font-size: 62px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    padding-left: 30rem
+}
+
+
+
+#contact p {
     font-size: 1.2em;
     line-height: 1.6;
     margin-bottom: 30px;
 }
+
+
 
 .contact-form {
     max-width: 600px;
@@ -372,20 +390,24 @@ body {
     padding: 10px;
     margin-bottom: 15px;
     box-sizing: border-box;
+    border-radius: 5px;
+    background: #0B0D21;
+    
 }
 
 .contact-form button {
-    background-color: #3498db;
+    background-color: #0DBF81;
     color: white;
     padding: 10px 20px;
     font-size: 1.2em;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    
 }
 
 .contact-form button:hover {
-    background-color: #2980b9;
+    background-color: #0DBF81;
 }
 
 .contact-info {
