--- a/style.css
+++ b/style.css
@@ -310,11 +310,11 @@ body {
 /* portfolio */
 
 
-#portfolio {
+/* #portfolio {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-}
+} */
 
 #portfolio h2 {
     color: #232230;
@@ -339,13 +339,29 @@ body {
     margin-right: 27rem;
 }
 
+.project_details {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
 .project p,
 h3 {
     padding-top: 1px;
 }
 
-.view {
-    justify-content: center;
+.all {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 15px;
+    text-decoration: none;
+    color: #fff;
+    background-color: #0DBF81;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    /* margin-top: 2rem; */
+    margin: 0 auto;
+    margin-top: 5rem;
 }
 
 /* contact */
