--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ h3 {
 /* footer */
 
 .footer {
-    background-color: #333;
+    background-color: #090B1A;
     color: #fff;
     padding: 50px 0;
 }
@@ -454,13 +454,93 @@ h3 {
 .footer-content {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.footer-section.links.right {
+    display: flex;
     justify-content: space-between;
 }
 
-.footer-section {
-    width: 30%;
+.footer-section h2 {
+    color: #fff;
+    font-size: 1.5em;
+    margin-bottom: 15px;
+}
+
+
+
+.quick_links,
+.services_links,
+.contacts_footer {
+    flex: 1;
+    max-width: 300px;
     padding: 20px;
     box-sizing: border-box;
+}
+
+.quick_links ul,
+.services_links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.quick_links a,
+.services_links a {
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 8px;
+    font-size: 1em;
+    transition: color 0.3s ease;
+}
+
+.quick_links a:hover,
+.services_links a:hover {
+    color: #0DBF81;
+}
+
+.contacts_footer {
+    color: #fff;
+    max-width: 300px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.contacts_footer p {
+    font-size: 1em;
+    line-height: 1.6;
+    margin-top: 10px; /* Adjust spacing between the h2 and the paragraph */
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .footer-section.links.right {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .quick_links,
+    .services_links,
+    .contacts_footer {
+        max-width: 100%; /* Adjust to take full width on smaller screens */
+        margin-bottom: 20px;
+    }
+}
+
+
+/* .footer-section {
+    flex: 1;
+    max-width: 300px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.right {
+    display: flex;
+    justify-content: space-between;
+    align-content: space-between;
 }
 
 .footer-section h2 {
@@ -475,11 +555,14 @@ h3 {
 .footer-section a {
     color: #fff;
     text-decoration: none;
+    display: block;
+    margin-bottom: 8px;
 }
 
 .footer-section a:hover {
-    text-decoration: underline;
-}
+    color: #0DBF81;
+} */
+
 
 .footer-bottom {
     text-align: center;
