--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 .logo-container img{
     height: 35px;
+    padding-left: 55px;
 }
 
 .nav-links {
@@ -831,6 +832,7 @@ h3 {
 
     .logo-container img {
         height: 20px;
+        padding-left: 5px;
     }
 
     /* Hero Section */
