--- a/style.css
+++ b/style.css
@@ -912,6 +912,7 @@ h3 {
     .about_details {
         max-width: 600px;
         margin-top: 20px;
+        text-align: center;
     }
 
     .about_details span {
@@ -919,15 +920,16 @@ h3 {
         font-size: 20px;
         display: block;
         margin-bottom: 10px;
+        text-align: center;
     }
 
     .about_details p {
         font-size: 16px;
         margin-bottom: 20px;
+        text-align: center;
     }
 
     .about_details ul {
-        text-align: left;
         padding-left: 0;
         list-style: none;
         margin-bottom: 20px;
