fixing contact's error

--- a/style.css
+++ b/style.css
@@ -359,9 +359,9 @@ h3 {
     margin: 0 auto; 
 }
 
-.contact-form form {
+/* .contact-form form {
     align-items: center;
-}
+} */
 
 .contact-form label {
     display: block;
