--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-
+    margin-left: 8rem;
 }
 
 .project p,
@@ -766,7 +766,6 @@ h3 {
         align-items: center;
         margin: 0 auto;
         max-width: 800px;
-        padding-left: 7rem;
     }
 
     .project_details {
