--- a/style.css
+++ b/style.css
@@ -773,6 +773,7 @@ h3 {
         flex-direction: column;
         align-items: center;
         text-align: center;
+        margin-right: 8rem;
     }
 
     .project p,
@@ -815,8 +816,7 @@ h3 {
         border: none;
         border-radius: 3px;
         cursor: pointer;
-        margin-top: 10px;
-        margin-left: 2rem;
+        margin: 0 auto;
     }
 
     /* Footer */
