--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    margin-left: 8rem;
+    
 }
 
 .project p,
@@ -654,7 +654,7 @@ h3 {
 
     .about_details span {
         color: #0DBF81;
-        font-size: 10px;
+        font-size: 20px;
         display: block;
         margin-bottom: 10px;
         text-align: center;
@@ -773,7 +773,6 @@ h3 {
         flex-direction: column;
         align-items: center;
         text-align: center;
-        margin-right: 8rem;
     }
 
     .project p,
@@ -816,7 +815,7 @@ h3 {
         border: none;
         border-radius: 3px;
         cursor: pointer;
-        margin: 0 auto;
+        margin: 10px auto;
     }
 
     /* Footer */
