--- a/style.css
+++ b/style.css
@@ -667,7 +667,7 @@ h3 {
 
     .about_details ul {
         padding-left: 0;
-        list-style: none;
+        /* list-style: none; */
         margin-bottom: 20px;
     }
 
